@@ -6,7 +6,7 @@ pkginclude_HEADERS =	\
 	trie.h		\
 	sb-trie.h
 
-EXTRA_DIST = libdatrie.def
+EXTRA_DIST = libdatrie.map
 
 INCLUDES = -I$(top_srcdir)
 
@@ -30,6 +30,6 @@ libdatrie_la_SOURCES =	\
 	sb-trie.c
 libdatrie_la_LDFLAGS =	-no-undefined \
 	-version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
-	-export-symbols $(srcdir)/libdatrie.def
-libdatrie_la_DEPENDENCIES = libdatrie.def
+	-Wl,--version-script=$(srcdir)/libdatrie.map
+libdatrie_la_DEPENDENCIES = libdatrie.map
 
